feat: update live

--- a/src/app/components/user-pages/landing/landing.component.html
+++ b/src/app/components/user-pages/landing/landing.component.html
@@ -67,7 +67,7 @@
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
                         <div class="live-views">8.2k viewers</div>
-                        <img src="http://i.ytimg.com/vi/eurXJnfsfhs/maxresdefault.jpg" alt="Gameplay"
+                        <img src="https://i.ytimg.com/vi/_TxsZiK8hVc/maxresdefault.jpg" alt="Gameplay"
                             class="thumbnail" />
                     </div>
                     <div class="live-info">
@@ -76,10 +76,10 @@
                                 alt="Profile img" />
                         </div>
                         <div class="live-text">
-                            <p class="live-title">Let's Loot!</p>
-                            <p class="live-user">Dynamo</p>
-                            <p class="live-game">Dead Island 2</p>
-                            <span class="live-lang">English</span>
+                            <p class="live-title">Marshell Shop</p>
+                            <p class="live-user">50 minutes</p>
+
+
                         </div>
                         <div class="live-dots">
                             <div class="rec-live-dot"></div>
@@ -92,7 +92,7 @@
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
                         <div class="live-views">8.2k viewers</div>
-                        <img src="http://i.ytimg.com/vi/eurXJnfsfhs/maxresdefault.jpg" alt="Gameplay"
+                        <img src="https://i.ytimg.com/vi/_TxsZiK8hVc/maxresdefault.jpg" alt="Gameplay"
                             class="thumbnail" />
                     </div>
                     <div class="live-info">
@@ -101,10 +101,10 @@
                                 alt="Profile img" />
                         </div>
                         <div class="live-text">
-                            <p class="live-title">Let's Loot!</p>
-                            <p class="live-user">Dynamo</p>
-                            <p class="live-game">Dead Island 2</p>
-                            <span class="live-lang">English</span>
+                            <p class="live-title">Brian</p>
+                            <p class="live-user">50 minutes</p>
+
+
                         </div>
                         <div class="live-dots">
                             <div class="rec-live-dot"></div>
@@ -117,7 +117,7 @@
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
                         <div class="live-views">8.2k viewers</div>
-                        <img src="http://i.ytimg.com/vi/eurXJnfsfhs/maxresdefault.jpg" alt="Gameplay"
+                        <img src="https://i.ytimg.com/vi/_TxsZiK8hVc/maxresdefault.jpg" alt="Gameplay"
                             class="thumbnail" />
                     </div>
                     <div class="live-info">
@@ -126,10 +126,10 @@
                                 alt="Profile img" />
                         </div>
                         <div class="live-text">
-                            <p class="live-title">Let's Loot!</p>
-                            <p class="live-user">Dynamo</p>
-                            <p class="live-game">Dead Island 2</p>
-                            <span class="live-lang">English</span>
+                            <p class="live-title">Marshell Shop</p>
+                            <p class="live-user">50 minutes</p>
+
+
                         </div>
                         <div class="live-dots">
                             <div class="rec-live-dot"></div>
@@ -142,7 +142,7 @@
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
                         <div class="live-views">8.2k viewers</div>
-                        <img src="http://i.ytimg.com/vi/eurXJnfsfhs/maxresdefault.jpg" alt="Gameplay"
+                        <img src="https://i.ytimg.com/vi/_TxsZiK8hVc/maxresdefault.jpg" alt="Gameplay"
                             class="thumbnail" />
                     </div>
                     <div class="live-info">
@@ -151,10 +151,10 @@
                                 alt="Profile img" />
                         </div>
                         <div class="live-text">
-                            <p class="live-title">Let's Loot!</p>
-                            <p class="live-user">Dynamo</p>
-                            <p class="live-game">Dead Island 2</p>
-                            <span class="live-lang">English</span>
+                            <p class="live-title">Marshell Shop</p>
+                            <p class="live-user">50 minutes</p>
+
+
                         </div>
                         <div class="live-dots">
                             <div class="rec-live-dot"></div>
@@ -167,7 +167,7 @@
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
                         <div class="live-views">8.2k viewers</div>
-                        <img src="http://i.ytimg.com/vi/eurXJnfsfhs/maxresdefault.jpg" alt="Gameplay"
+                        <img src="https://i.ytimg.com/vi/_TxsZiK8hVc/maxresdefault.jpg" alt="Gameplay"
                             class="thumbnail" />
                     </div>
                     <div class="live-info">
@@ -176,10 +176,10 @@
                                 alt="Profile img" />
                         </div>
                         <div class="live-text">
-                            <p class="live-title">Let's Loot!</p>
-                            <p class="live-user">Dynamo</p>
-                            <p class="live-game">Dead Island 2</p>
-                            <span class="live-lang">English</span>
+                            <p class="live-title">Marshell Shop</p>
+                            <p class="live-user">50 minutes</p>
+
+
                         </div>
                         <div class="live-dots">
                             <div class="rec-live-dot"></div>
