--- a/src/app/components/merchant-pages/live/live.component.html
+++ b/src/app/components/merchant-pages/live/live.component.html
@@ -1,21 +1,58 @@
 <div class="grid">
     <div class="col-12">
         <div class="card">
-            <div class="d-flex flex-wrap">
+            <div *ngIf="isOnLive" class="d-flex flex-wrap">
+                <div class="col-12 xl:col-8">
+                    Live here
 
-                <div class="col-12 xl:col-6">
-                    There is no live stream available at the moment.
+                </div>
+                <div class="col-12 xl:col-4">
+                    <div *ngFor="let item of  listProductForLive" class="mb-2">
+                        <div class="item-name d-flex justify-content-between align-items-center gap-4">
+                            <img width="60px" [src]="item?.image || item?.images[0]" alt="" />
+                            <div class="flex-grow-1">
+
+                                <h6 class="mb-0">{{ item.name }}</h6>
+                                <!-- <h6 class="mb-0">{{ item.quantity }}</h6> -->
+                                <p class="mb-0">
+                                    {{ item?.totalItemPrice || item?.price | currency : "VND" }}
+                                </p>
+                            </div>
+                            <div>
+                                <i class="bi bi-pin-angle cursor-pointer"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div *ngIf="!isOnLive" class="w-100 d-flex flex-wrap">
+                <div class="col-12 xl:col-6"> There is no live stream available at the moment.
 
                     <h1>Access the Camera</h1>
 
                     <video autoplay="true" id="videoElement"></video>
                     <button *ngIf="!isOnLive" pButton pRipple label="Start Live Stream" class="p-button-success mr-2"
                         (click)="isOnLive = true;getCamera()"></button>
-
                 </div>
-                <div class="col-12 xl:col-6">Select Product for Live</div>
+                <div class="col-12 xl:col-6">Select Product for Live
+                    <div *ngFor="let item of  listAllProduct" class="mb-2">
+                        <div class="item-name d-flex justify-content-between align-items-center gap-4">
+                            <p-checkbox [binary]="true" (onChange)="selectItem(item)"></p-checkbox>
+                            <img width="60px" [src]="item?.image || item?.images[0]" alt="" />
+                            <div class="flex-grow-1">
+
+                                <h6 class="mb-0">{{ item.name }}</h6>
+                                <!-- <h6 class="mb-0">{{ item.quantity }}</h6> -->
+                                <p class="mb-0">
+                                    {{ item?.totalItemPrice || item?.price | currency : "VND" }}
+                                </p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
     </div>
+
 </div>
