--- a/src/app/components/user-pages/live-detail/live-detail.component.html
+++ b/src/app/components/user-pages/live-detail/live-detail.component.html
@@ -48,7 +48,7 @@
                     <div class="ps-4 mt-2">
 
                         <div class="size attribute" *ngIf="listSize.length > 0">
-                            <h6 class="mt-2"><b>Size</b></h6>
+                            <h6 class="mt-2 w-80"><b>Size</b></h6>
                             <div class="size" *ngFor="let size of listSize" [id]="size.attributeId"
                                 [ngClass]="{ disabled: !size.active }" (click)="
                                                 size.active
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         <div class="color attribute" *ngIf="listColor.length > 0">
-                            <h6 class="mt-2"><b>Color</b></h6>
+                            <h6 class="mt-2 w-80"><b>Color</b></h6>
 
                             <div class="color" *ngFor="let color of listColor" [id]="color.attributeId"
                                 [ngClass]="{ disabled: !color.active }" (click)="
@@ -71,8 +71,9 @@
                             </div>
                         </div>
                         <div class="d-flex">
-                            <h6 class="mt-2 me-2"><b>Amount</b></h6>
-                            <app-quantity [quantity]="numberOfProduct" [max]="selectedVariety?.stockAmount || 0"
+                            <h6 class="mt-2 me-2 w-80"><b>Amount</b></h6>
+                            <app-quantity class="ms-2" [quantity]="numberOfProduct"
+                                [max]="selectedVariety?.stockAmount || 0"
                                 (onQuantity)="onChangeQty($event)"></app-quantity>
                         </div>
                     </div>
